2002-06-21  Stephen Browne <stephen.browne@sun.com>

	* wm-common.[ch] : added new files to expose
	wm_common_get_current_window_manager and 
	wm_common_register_window_manager_change

2002-06-13  Jody Goldberg <jody@gnome.org>

	* capplet-util.c (capplet_help) : Use the new utility.
	(capplet_error_dialog) : split out into a new utility.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-28 Satyajit Kanungo <satyajit.kanungo@wipro.com>

	* capplet-util.c : capplet_help () The Help directory is changed to 
	  user-guide. 		

2002-05-26  Jody Goldberg <jody@gnome.org>

	* capplet-util.c (capplet_help) : new utility.

2002-05-16  jacob berkman  <jacob@ximian.com>

	* gconf-property-editor.c (peditor_image_set_filename): if we
	haven't been initting, don't pop up an error message.  if we are,
	set our image to GTK_STOCK_MISSING_IMAGE.  fixes bug exposed by
	fix for #76993

Tue May 14 12:08:17 2002  Jonathan Blandford  <jrb@redhat.com>

	* theme-common.c (theme_common_init): confirm that the ~/.themes/
	directory exists.

2002-04-29  Rachel Hestilow  <hestilow@ximian.com>

	* file-transfer-dialog.c (file_transfer_dialog_update_cb):
	Set dialog title to current phase.
	
2002-04-29  Rachel Hestilow  <hestilow@ximian.com>

	* file-transfer-dialog.[ch]: Added.
	
	* Makefile.am: Compile file-transfer-dialog.[ch].

2002-04-19  Mark McLoughlin  <mark@skynet.ie>

	* gconf-property-editor.[ch]: (peditor_integer_value_changed),
	(peditor_integer_widget_changed), (gconf_peditor_new_integer_valist),
	(gconf_peditor_new_integer): implement GtkEntry based integer
	peditor.

2002-04-21  Rachel Hestilow  <hestilow@ximian.com>

	* gconf-property-editor.c
	(gconf_peditor_new_select_menu_with_enum,
	 gconf_peditor_new_enum_toggle,
	 gconf_peditor_new_select_radio_with_enum): Add in an explicit
	 'use_nick' parameter. Implicit guessing can break badly if
	 the gconf data gets corrupted.
	(peditor_enum_int_from_string): Change use_nick to copy-by-value,