@@ -1,3 +1,8 @@
+2002-06-27  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=86593
+	* main.c (setup_dialog) : watch for missing icons
+
 2002-06-17  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.0
