@@ -1,3 +1,8 @@
+2002-06-27  Jody Goldberg <jody@gnome.org>
+
+	* gnome-keybinding-properties.c (setup_dialog) : fix and move the code
+	  into capplet_set_icon.
+
 2002-06-26  Jody Goldberg <jody@gnome.org>
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=86575
