@@ -1,3 +1,7 @@
+2002-06-27  Jody Goldberg <jody@gnome.org>
+
+	* capplet-util.c (capplet_set_icon) : new util.
+
 2002-06-21  Stephen Browne <stephen.browne@sun.com>
 
 	* wm-common.[ch] : added new files to expose
